@@ -102,6 +102,7 @@ This file lists the incompatible changes between Version 2.x and older versions
   - Z_to_Flx now takes a shifted variable number, as Fl_to_Flx.
   - rename FlxqX_pow to FlxqX_powu
   - rename anell -> ellan, anellsmall -> ellanQ_zv
+  - ellsea: the argument p was removed and the interface modified
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - eval() no longer evaluates its arguments in "permissive" mode: eval("1a")
