@@ -345,11 +345,6 @@ a non-prime finite field $\F_q$, ignore $p$ and return $q+1 - \#E(\F_q)$.
 When $p$ is implied ($E$ defined over $\Q_p$ or a finite field), $p$ can be
 omitted (set to \kbd{NULL}).
 
-\misctitle{Deprecated routines}
-
-\fun{GEN}{ellsea}{GEN E, GEN p, long s} deprecated, use \kbd{Fp\_ellcard\_SEA}
-instead.
-
 \subsubsec{Curves defined a non-prime finite field}
 In this subsection, we assume that \tet{ell_get_type}$(E)$ is \tet{t_ELL_Fq}.
 (As noted above, a curve defined over $\Z/p\Z$ can be represented as a
@@ -370,7 +365,7 @@ $P$, where $o$ is a multiple of the order of $P$, or its factorization.
 
 \fun{GEN}{FF_ellcard}{GEN E} returns $\#E(\F_q)$.
 
-\fun{GEN}{FF_ellcard_SEA}{GEN E, long s}
+\fun{GEN}{FF_ellcard_SEA}{GEN E, ulong s}
 This function returns $\#E(\F_q)$, using the Schoof-Elkies-Atkin
 algorithm.  Assume $p\neq 2,3$.
 The parameter $s$ has the same meaning as in \kbd{Fp\_ellcard\_SEA}.
@@ -421,16 +416,16 @@ $j$-invariant of a supersingular curve over $\F_p$, $0$ otherwise.
 \fun{GEN}{Fp_ellcard}{GEN a4, GEN a6, GEN p} returns the cardinality of the
 group $E(\F_p)$.
 
-\fun{GEN}{Fp_ellcard_SEA}{GEN a4, GEN a6, GEN p, long s}
+\fun{GEN}{Fp_ellcard_SEA}{GEN a4, GEN a6, GEN p, ulong s}
 This function returns $\#E(\F_p)$, using the Schoof-Elkies-Atkin algorithm.
 If the \kbd{seadata} package is installed, the function will be faster.
 
 The extra flag \kbd{s}, if set to a non-zero value, causes the computation to
 return \kbd{gen\_0} (an impossible cardinality) if one of the small primes
-$\ell>s$ divides the curve order. For cryptographic applications, where one
-is usually interested in curves of prime order, setting $s=1$ efficiently
-weeds out most uninteresting curves; if curves of order a power of $2$ times
-a prime are acceptable, set $s=2$.
+$\ell$ divides the curve order but does not divide $s$.
+For cryptographic applications, where one is usually interested in curves of
+prime order, setting $s=1$ efficiently weeds out most uninteresting curves; if
+curves of order a power of $2$ times a prime are acceptable, set $s=2$.
 
 \fun{GEN}{Fp_ffellcard}{GEN a4, GEN a6, GEN q, long n, GEN p} returns the
 cardinality of the group $E(\F_q)$ where $q=p^n$.
@@ -741,7 +736,7 @@ the $j$-invariant of a supersingular curve over $\F_p[X]/(T)$, $0$ otherwise.
 \fun{GEN}{FpXQ_ellcard}{GEN a4, GEN a6, GEN T, GEN p}
 returns the order of $E(\F_p[X]/(T))$.
 
-\fun{GEN}{Fq_ellcard_SEA}{GEN a4, GEN a6, GEN q, GEN T, GEN p, long s}
+\fun{GEN}{Fq_ellcard_SEA}{GEN a4, GEN a6, GEN q, GEN T, GEN p, ulong s}
 This function returns $\#E(\F_p[X]/(T))$, using the Schoof-Elkies-Atkin
 algorithm.
 Assume $p\neq 2,3$, and $q$ is the cardinality of $\F_p[X]/(T)$.
