@@ -1148,7 +1148,7 @@ FF_ellcard(GEN E)
 }
 
 GEN
-FF_ellcard_SEA(GEN E, long smallfact)
+FF_ellcard_SEA(GEN E, ulong smallfact)
 {
   pari_sp av = avma;
   GEN T,p;
