@@ -1,0 +1,20 @@
+Function: ellsea
+Section: elliptic_curves
+C-Name: ellsea
+Prototype: GD0,U,
+Help: ellsea(E,{tors=0}): computes the order of the group E(Fq)
+ for the elliptic curve E, defined over a finite field,
+ using SEA algorithm, with early abort for curves with non prime orders.
+Doc: Let $E$ be an \var{ell} structure as output by \kbd{ellinit}, defined over
+ a finite field $\F_q$.
+ This function computes the order of the group $E(\F_q)$ using the SEA
+ algorithm. The characteristic must be large enough.
+ It is meant to be used when looking for curves having prime order:
+ When $tors=1$ is set, the function will return $0$ as soon
+ as it detects that the order has a small prime factor.
+ When $tors>1$ is set, the function will return $0$ as soon
+ as it detects that the order has a small prime factor not dividing
+ $tors$.
+
+ The availability of the \kbd{seadata} package will speed up the computation,
+ and is strongly recommended when looking for curves having prime order.
